--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-
+    <nav id="nav-bar">
+        <span>logo</span>
+        <h1>Eleni Economidou</h1>
+        <a href="">Publications</a>
+        <a href="">CV</a>
+        <a href="">About</a>
+    </nav>
 </body>
 
 </html>
