Give navigation bar temporary inital style

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 
 <body>
     <nav id="nav-bar">
-        <span>logo</span>
-        <h1>Eleni Economidou</h1>
-        <a href="">Publications</a>
-        <a href="">CV</a>
-        <a href="">About</a>
+        <div id="nav-left-side">
+            <span>logo</span>
+            <h1 id="name">Eleni Economidou</h1>
+        </div>
+        <div id="nav-links">
+            <a href="" class="link" id="publications">Publications</a>
+            <a href="" class="link" id="cv">CV</a>
+            <a href="" class="link" id="about">About</a>
+        </div>
     </nav>
+
 </body>
 
 </html>
