Add markup for hero

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <a href="" class="link" id="about">About</a>
         </div>
     </nav>
+    <div id="hero">
+        <h1>My name is Eleni Economidou</h1>
+        <div>I'm a ..</div>
+    </div>
 
 </body>
 
