Change all ids to clasess for better css practice

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <nav id="nav-bar">
-        <div id="nav-left-side">
+    <nav class="nav-bar">
+        <div class="nav-bar-credentials">
             <span>logo</span>
-            <h1 id="name">Eleni Economidou</h1>
+            <h1 class="nav-full-name">Eleni Economidou</h1>
         </div>
-        <div id="nav-links">
+        <div class="nav-links">
             <a href="" class="link" id="publications">Publications</a>
             <a href="" class="link" id="cv">CV</a>
             <a href="" class="link" id="about">About</a>
