Expand hero markup and add style

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
             <a href="" class="link" id="about">About</a>
         </div>
     </nav>
-    <div id="hero">
-        <h1>My name is Eleni Economidou</h1>
-        <div>I'm a ..</div>
-    </div>
+    <div class="hero-container">
+        <div class="hero">
+            <div class="hero-text">
+                <h1>My name is <span class="hero-fullname">Eleni Economidou</span></h1>
+                <div class="hero-description">I'm a ..</div>
+            </div>
+            <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
+        </div>
 
 </body>
 
