Add hire-me-button markup

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="hero-text">
                 <h1>My name is <span class="hero-fullname">Eleni Economidou</span></h1>
                 <div class="hero-description">I'm a ..</div>
+                <a class="hire-me-button" href="mailto: mail@mail.com">hire me</a>
             </div>
             <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
         </div>
