Add hire-me-button style

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </nav>
     <div class="hero-container">
         <div class="hero">
-            <div class="hero-text">
+            <div class="hero-text-container">
                 <h1>My name is <span class="hero-fullname">Eleni Economidou</span></h1>
                 <div class="hero-description">I'm a ..</div>
-                <a class="hire-me-button" href="mailto: mail@mail.com">hire me</a>
+                <button class="hire-me-button">hire me</button>
             </div>
             <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
         </div>
