--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h1 class="nav-full-name">Eleni Economidou</h1>
         </div>
         <div class="nav-links">
+            <a href="" class="link" id="home">Home</a>
             <a href="" class="link" id="publications">Publications</a>
             <a href="" class="link" id="cv">CV</a>
             <a href="" class="link" id="about">About</a>
@@ -24,7 +25,7 @@
     <div class="hero-container">
         <div class="hero">
             <div class="hero-text-container">
-                <h1>My name is <span class="hero-fullname">Eleni Economidou</span></h1>
+                <span class="hero-fullname">Eleni Economidou</span>
                 <div class="hero-description">I'm a ..</div>
                 <button class="hire-me-button">hire me</button>
             </div>
