Redesign hero content and style

--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
             <a href="" class="link" id="about">About</a>
         </div>
     </nav>
-    <div class="hero-container">
-        <div class="hero">
-            <div class="hero-text-container">
-                <span class="hero-fullname">Eleni Economidou</span>
-                <div class="hero-description">I'm a ..</div>
-                <button class="hire-me-button">hire me</button>
-            </div>
-            <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
-        </div>
+
+    <div class="hero">
+        <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
+        <span class="hero-fullname">Eleni &nbsp&nbspEconomidou</span>
+        <div class="hero-description">Industrial Designer & Architect</div>
+        <button class="hire-me-button">hire me</button>
+    </div>
+
 
 </body>
 
