--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="nav-links">
             <a href="" class="link" id="home">Home</a>
             <a href="" class="link" id="publications">Publications</a>
-            <a href="" class="link" id="cv">CV</a>
+            <a href="" class="link" id="resume">Resume</a>
             <a href="" class="link" id="about">About</a>
         </div>
     </nav>
