--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="nav-full-name">Eleni Economidou</h1>
         </div>
         <div class="nav-links">
-            <a href="" class="link" id="home">Home</a>
+            <a href="" class="link home-btn" id="home">Home</a>
             <a href="" class="link" id="publications">Publications</a>
             <a href="" class="link" id="resume">Resume</a>
             <a href="" class="link" id="about">About</a>
