Implement script for mouse-tracker to follow mouse

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="blob"></div>
+    <div id="mouse-tracker"></div>
     <nav class="nav-bar">
         <div class="nav-bar-credentials">
             <span>logo</span>
