Add blur to finalize mouse-tracker

--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@
 
 <body>
     <div id="mouse-tracker"></div>
-    <nav class="nav-bar">
-        <div class="nav-bar-credentials">
-            <span>logo</span>
-            <h1 class="nav-full-name">Eleni Economidou</h1>
-        </div>
-        <div class="nav-links">
-            <a href="" class="link home-btn" id="home">Home</a>
-            <a href="" class="link" id="publications">Publications</a>
-            <a href="" class="link" id="resume">Resume</a>
-            <a href="" class="link" id="about">About</a>
-        </div>
-        <button class="hire-me-button">hire me</button>
-
-    </nav>
-
-    <div class="hero">
-        <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
-        <span class="hero-fullname">Eleni &nbsp&nbspEconomidou</span>
-        <div class="hero-description">Industrial Designer & Architect</div>
+    <div class="blur"></div>
+    <div class="section-1">
+        <nav class="nav-bar">
+            <div class="nav-bar-credentials">
+                <span>logo</span>
+                <h1 class="nav-full-name">Eleni Economidou</h1>
+            </div>
+            <div class="nav-links">
+                <a href="" class="link home-btn" id="home">Home</a>
+                <a href="" class="link" id="publications">Publications</a>
+                <a href="" class="link" id="resume">Resume</a>
+                <a href="" class="link" id="about">About</a>
+            </div>
+            <button class="hire-me-button">hire me</button>
+        </nav>
+        <div class="hero">
+            <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
+            <span class="hero-fullname">Eleni &nbsp&nbspEconomidou</span>
+            <div class="hero-description">Industrial Designer & Architect</div>
+        </div>>
     </div>
 
 
