--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div id="mouse-tracker"></div>
     <div class="blur"></div>
-    <div class="section-1">
+
+    <div class="page-container">
         <nav class="nav-bar">
             <div class="nav-bar-credentials">
                 <span>logo</span>
@@ -20,17 +21,22 @@
             </div>
             <div class="nav-links">
                 <a href="" class="link home-btn" id="home">Home</a>
-                <a href="" class="link" id="publications">Publications</a>
+                <a href="#page-2" class="link" id="publications">Publications</a>
                 <a href="" class="link" id="resume">Resume</a>
                 <a href="" class="link" id="about">About</a>
             </div>
             <button class="hire-me-button">hire me</button>
         </nav>
-        <div class="hero">
-            <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
-            <span class="hero-fullname">Eleni &nbsp&nbspEconomidou</span>
-            <div class="hero-description">Industrial Designer & Architect</div>
-        </div>>
+        <div class="pages page-1" id="page-1">
+            <div class="hero">
+                <img class="hero-image" src="https://source.unsplash.com/-heLWtuAN3c" alt="picture of Eleni">
+                <span class="hero-fullname">Eleni &nbsp&nbspEconomidou</span>
+                <div class="hero-description">Industrial Designer & Architect</div>
+            </div>
+        </div>
+        <div class="pages page-2" id="page-2">
+
+        </div>
     </div>
 
 
