--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div id="mouse-tracker"></div>
     <div class="blur"></div>
 
-    <div class="page-container">
+    <div class="page-container" id="page-container">
         <nav class="nav-bar">
             <div class="nav-bar-credentials">
                 <span>logo</span>
                 <h1 class="nav-full-name">Eleni Economidou</h1>
             </div>
             <div class="nav-links">
-                <a href="" class="link home-btn" id="home">Home</a>
+                <a href="#page-1" class="link active-page" id="home">Home</a>
                 <a href="#page-2" class="link" id="publications">Publications</a>
                 <a href="" class="link" id="resume">Resume</a>
                 <a href="" class="link" id="about">About</a>
