--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="nav-links">
                 <a href="#page-1" class="link active-page" id="home">Home</a>
                 <a href="#page-2" class="link" id="publications">Publications</a>
-                <a href="" class="link" id="resume">Resume</a>
-                <a href="" class="link" id="about">About</a>
+                <a href="#page-3" class="link" id="resume">Resume</a>
+                <a href="#page-4" class="link" id="about">About</a>
             </div>
             <button class="hire-me-button">hire me</button>
         </nav>
@@ -34,11 +34,10 @@
                 <div class="hero-description">Industrial Designer & Architect</div>
             </div>
         </div>
-        <div class="pages page-2" id="page-2">
-
-        </div>
+        <div class="pages page-2" id="page-2"></div>
+        <div class="pages page-3" id="page-3"></div>
+        <div class="pages page-4" id="page-4"> </div>
     </div>
-
 
 </body>
 
