Add cards with hover animation for publication page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,168 @@
                 <div class="hero-description">Industrial Designer & Architect</div>
             </div>
         </div>
-        <div class="pages page-2" id="page-2"></div>
+        <div class="pages page-2" id="page-2">
+            <div id="publication-cards">
+                <div class="card" data-color="green">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="blue">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="red">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="green">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="blue">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="red">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="green">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="blue">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="red">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="green">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="blue">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+                <div class="card" data-color="red">
+                    <img class="card-front-image card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    <div class="card-faders">
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                        <img class="card-fader card-image" src="https://source.unsplash.com/-heLWtuAN3c" />
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
         <div class="pages page-3" id="page-3"></div>
         <div class="pages page-4" id="page-4"> </div>
     </div>
